# CP-codeforce

./: .gitmodules  A. Easy As ABC.cpp  A. Hexadecimal's theorem.cpp  A. Hit the Lottery.cpp  A. Satisfying Constraints.cpp  A. Tricky Template.cpp  A. rook.cpp  B. 250 Thousand Tons of TNT.cpp  B. Fair Division.cpp  B. ICPC Balloons.cpp  B. Preparing for the Contest.cpp  B. YetnotherrokenKeoard.cpp  C cypher.cpp  C. Advantage.cpp  C. Sending Messages.cpp  C1. Powering the Hero (easy version).cpp  Count Nice Pairs in an Array.cpp  D. Odd Queries.cpp  Dynamic Range Sum Queries.cpp  E. Mirror Grid.cpp  Find Duplicates In Array.cpp  Minimum Pizzas.cpp  ROOK.cpp  asic geometry.cpp  b1.cpp  coin.cpp  cp.sublime-snippet  cpp.sublime-snippet  error.txt  graph.cpp  infixtopostfix.cpp  kpure.cpp  linked.cpp  lottery  main.c  main.cpp  murge sort.cpp  net.cpp  new  new.cpp  (+6 more)
CODEFORCE's/: A. Unimodal Array.cpp  error.txt
Others/A. Array Coloring/: Header.h
Others/cLIOn /CSES_problem_set/: .autocp  Apartments  Apartments.cpp  CMakeLists.txt  CSESLine Segment Intersection  CSESLine Segment Intersection.cpp  Distinct Numbers.cpp  Dynamic Range Sum Queries.cpp  Ferris Wheel  Ferris Wheel.cpp  HackerEarth_Prime Array  HackerEarth_Prime Array.cpp  Point Location Test  Point Location Test.cpp  a.out  coin_flip.cpp  coin_flip_2.cpp  hackerearth_The output of a function.cpp  main1.cpp  stater  stater.cpp  static Range Sum Queries.cpp
Others/cLIOn /CSES_problem_set/Apartments.dSYM/Contents/: Info.plist
Others/cLIOn /CSES_problem_set/Apartments.dSYM/Contents/Resources/DWARF/: Apartments
(+734 files in other folders)
