cmake_minimum_required(VERSION 3.26)
project(CSES_problem_set)

set(CMAKE_CXX_STANDARD 20)

add_executable(CSES_problem_set coin_flip.cpp
        "Distinct Numbers.cpp"
        Apartments.cpp
        "static Range Sum Queries.cpp"
        "Dynamic Range Sum Queries.cpp"
        coin_flip_2.cpp
        "hackerearth_The output of a function.cpp"
        stater.cpp
        "main1.cpp"
        "Ferris Wheel.cpp"
        "HackerEarth_Prime Array.cpp"
        "HackerEarth_Prime Array.cpp"
        "CSESLine Segment Intersection.cpp"
)